--- a/Blazor8WithRolesAndSignalR/Blazor8WithRolesAndSignalR/Blazor8WithRolesAndSignalR.csproj
+++ b/Blazor8WithRolesAndSignalR/Blazor8WithRolesAndSignalR/Blazor8WithRolesAndSignalR.csproj
@@ -12,11 +12,12 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.*-*" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.*-*" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.*-*" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.*-* " />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.*-*" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.*-*" />
   </ItemGroup>
   <ItemGroup>
-	<PackageReference Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.*-* " />
+    <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.*-* " />
     <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.Icons" Version="4.*-* " />
   </ItemGroup>
 </Project>
